force-app/main/default/objects/Dialpad__Dialpad_List_Filter__c/Dialpad__Dialpad_List_Filter__c.object-meta.xml
<CustomObject>
    <label>Dialpad List Filter</label>
    <nameField>
        <label>Dialpad List Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dialpad List Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>