force-app/main/default/objects/Dialpad__Dialpad_List_Filter__c/fields/Dialpad__Dialpad_List__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Dialpad_List__c</fullName>
    <label>Dialpad List</label>
    <referenceTo>Dialpad__Dialpad_List__c</referenceTo>
    <relationshipName>Dialpad_List_Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>