force-app/main/default/objects/Dialpad__Dialpad_List_Filter__c/fields/Dialpad__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>