force-app/main/default/objects/Dialpad__Dialpad_List_Filter__c/fields/Dialpad__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Field_Value__c</fullName>
    <label>Field Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>