force-app/main/default/objects/Dialpad__Dialpad_List_Filter__c/fields/Dialpad__Filter_Index__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Filter_Index__c</fullName>
    <label>Filter Index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>