force-app/main/default/objects/Dialpad__Dialpad_List_Filter__c/fields/Dialpad__Operator__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Operator__c</fullName>
    <label>Operator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>